--- a/SwivlExam/SwivlExam/Base.lproj/Main.storyboard
+++ b/SwivlExam/SwivlExam/Base.lproj/Main.storyboard
@@ -64,10 +64,75 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Loading..." id="n47-lZ-CX3"/>
+                    <connections>
+                        <segue destination="mn7-01-6LI" kind="show" identifier="showUserAvatarSeque" id="YoJ-pp-pQf"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="veN-pT-944" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1269" y="529"/>
+            <point key="canvasLocation" x="1266" y="529"/>
+        </scene>
+        <!--Image Viewer View Controller-->
+        <scene sceneID="q15-F8-gzf">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="mn7-01-6LI" customClass="ImageViewerViewController" customModule="SwivlExam" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="UaN-7c-NrQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="79S-bW-fVr"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="h8J-Sl-ztC">
+                        <rect key="frame" x="0.0" y="64" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" maximumZoomScale="3" translatesAutoresizingMaskIntoConstraints="NO" id="lWR-xg-Nia">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mFd-k7-D05">
+                                        <rect key="frame" x="0.0" y="0.0" width="400" height="400"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="400" id="uz1-8C-vd4"/>
+                                            <constraint firstAttribute="height" constant="400" id="yVm-Vy-i0E"/>
+                                        </constraints>
+                                    </imageView>
+                                    <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="lyZ-Ru-Q5p">
+                                        <rect key="frame" x="190" y="190" width="20" height="20"/>
+                                    </activityIndicatorView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="mFd-k7-D05" firstAttribute="centerX" secondItem="lyZ-Ru-Q5p" secondAttribute="centerX" id="IdL-9a-3mE"/>
+                                    <constraint firstAttribute="bottom" secondItem="mFd-k7-D05" secondAttribute="bottom" constant="90" id="VDC-b0-aoB"/>
+                                    <constraint firstItem="mFd-k7-D05" firstAttribute="top" secondItem="lWR-xg-Nia" secondAttribute="top" id="aCa-RV-5ln"/>
+                                    <constraint firstAttribute="trailing" secondItem="mFd-k7-D05" secondAttribute="trailing" constant="100" id="ofX-lA-yhR"/>
+                                    <constraint firstItem="mFd-k7-D05" firstAttribute="centerY" secondItem="lyZ-Ru-Q5p" secondAttribute="centerY" id="t5H-nR-D0M"/>
+                                    <constraint firstItem="mFd-k7-D05" firstAttribute="leading" secondItem="lWR-xg-Nia" secondAttribute="leading" id="xeN-eD-5cL"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="delegate" destination="mn7-01-6LI" id="3gD-Vm-Ecw"/>
+                                </connections>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="lWR-xg-Nia" secondAttribute="trailing" id="6YC-Mp-9an"/>
+                            <constraint firstItem="lWR-xg-Nia" firstAttribute="top" secondItem="UaN-7c-NrQ" secondAttribute="bottom" id="PX4-6r-ngH"/>
+                            <constraint firstItem="lWR-xg-Nia" firstAttribute="leading" secondItem="h8J-Sl-ztC" secondAttribute="leading" id="ahB-So-Q84"/>
+                            <constraint firstItem="79S-bW-fVr" firstAttribute="top" secondItem="lWR-xg-Nia" secondAttribute="bottom" id="f6b-51-brr"/>
+                        </constraints>
+                    </view>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <connections>
+                        <outlet property="_activityIndicator" destination="lyZ-Ru-Q5p" id="gQh-Ml-vNO"/>
+                        <outlet property="_bottomConstaint" destination="VDC-b0-aoB" id="sbn-ow-1Mh"/>
+                        <outlet property="_imageView" destination="mFd-k7-D05" id="v72-L5-27t"/>
+                        <outlet property="_leadingConstraint" destination="xeN-eD-5cL" id="3CZ-dq-NhK"/>
+                        <outlet property="_scrollView" destination="lWR-xg-Nia" id="ytJ-3E-AfR"/>
+                        <outlet property="_topConstaint" destination="aCa-RV-5ln" id="hSx-Mx-1sC"/>
+                        <outlet property="_trailingConstraint" destination="ofX-lA-yhR" id="Tyg-Dz-1z2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="j5J-oj-3aG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1969" y="529"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="1H3-KL-eJH">
